Настройка какркаса приложения

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,17 @@
-/.idea/
-/node_modules/
-.DS_Store
+# Logs
+logs/
+*.log
+npm-debug.log*
+
+# IDE & editors
+.idea
+.vscode
+
+# Dependency directory
+node_modules/
+
+# Compiled and temporary files
+/app/public/
+
+# Other files
 /.env
