--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack --watch",
+    "start": "npm-run-all --parallel watch:server watch:src",
     "watch:src": "webpack --watch",
-    "watch:server": "nodemon -e scss,pug --watch app app.js",
+    "watch:server": "nodemon -e scss,pug,js --watch app app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "preinstall": "echo \" Preinstall command not found\"",
     "postintall": "echo \" Postinstall command not found\"",
@@ -24,6 +24,7 @@
     "express": "^4.16.3",
     "lodash": "^4.17.5",
     "morgan": "^1.9.0",
+    "npm-run-all": "^4.1.2",
     "pug": "^2.0.1",
     "serve-favicon": "^2.4.5"
   },
@@ -34,9 +35,10 @@
     "babel-preset-env": "^1.6.1",
     "browser-sync": "^2.23.6",
     "css-loader": "^0.28.11",
+    "eslint": "^4.19.0",
+    "eslint-config-yandex": "^1.0.6",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
-    "i": "^0.3.6",
     "node-sass": "^4.7.2",
     "nodemon": "^1.17.2",
     "nodemon-browsersync-webpack-plugin": "^1.0.1",
