--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build": "echo \" Build/webpack command not found\"",
     "postbuild": "echo \" Prebuild command not found\"",
     "postversion": "echo \" Publish command not found\"",
-    "pretest": "eslint --fix --ignore-path .gitignore ."
+    "pretest": "eslint --fix --ignore-path .gitignore .",
+    "prettier": "prettier **/*.js"
   },
   "author": "Udobnaja",
   "license": "ISC",
@@ -48,6 +49,7 @@
     "nodemon-browsersync-webpack-plugin": "^1.0.1",
     "npm": "^5.7.1",
     "postcss-loader": "^2.1.2",
+    "prettier": "^1.11.1",
     "sass-loader": "^6.0.7",
     "scss-lint": "0.0.0",
     "style-loader": "^0.20.3",
