Подключение и прогон через sass lint

--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "build": "echo \" Build/webpack command not found\"",
     "postbuild": "echo \" Prebuild command not found\"",
     "postversion": "echo \" Publish command not found\"",
-    "pretest": "eslint --fix --ignore-path .gitignore .",
+    "lint:eslint": "eslint --fix --ignore-path .gitignore .",
+    "lint:sass": "stylelint **/*.scss --syntax scss --fix ",
+    "pretest": "lint:eslint lint:sass",
     "prettier": "prettier **/*.js"
   },
   "author": "Udobnaja",
@@ -51,8 +53,9 @@
     "postcss-loader": "^2.1.2",
     "prettier": "^1.11.1",
     "sass-loader": "^6.0.7",
-    "scss-lint": "0.0.0",
     "style-loader": "^0.20.3",
+    "stylelint": "^9.1.3",
+    "stylelint-config-standard": "^18.2.0",
     "url-loader": "^1.0.1",
     "webpack": "^4.1.1",
     "webpack-cli": "^2.0.12",
