--- a/package.json
+++ b/package.json
@@ -7,17 +7,18 @@
     "start": "npm-run-all --parallel watch:server watch:src",
     "watch:src": "webpack --watch",
     "watch:server": "nodemon -e scss,pug,js --watch app app.js",
+    "pretest": "npm run lint:eslint && npm run lint:sass",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "lint:eslint": "eslint --fix --ignore-path .gitignore .",
+    "lint:sass": "stylelint **/*.scss --syntax scss --fix ",
     "preinstall": "echo \" Preinstall command not found\"",
     "postintall": "echo \" Postinstall command not found\"",
     "build": "echo \" Build/webpack command not found\"",
     "postbuild": "echo \" Prebuild command not found\"",
     "postversion": "echo \" Publish command not found\"",
-    "lint:eslint": "eslint --fix --ignore-path .gitignore .",
-    "lint:sass": "stylelint **/*.scss --syntax scss --fix ",
-    "pretest": "lint:eslint lint:sass",
     "prettier": "prettier **/*.js"
   },
+  "pre-commit": [ "pretest" ],
   "author": "Udobnaja",
   "license": "ISC",
   "dependencies": {
@@ -52,6 +53,7 @@
     "nodemon-browsersync-webpack-plugin": "^1.0.1",
     "npm": "^5.7.1",
     "postcss-loader": "^2.1.2",
+    "pre-commit": "^1.2.2",
     "prettier": "^1.11.1",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
