--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "watch:src": "webpack --watch",
     "watch:server": "nodemon -e scss,pug,js --watch app app.js",
     "pretest": "npm run lint:eslint && npm run lint:sass",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Error: no test specified\" && exit 0",
     "lint:eslint": "eslint --fix --ignore-path .gitignore .",
     "lint:sass": "stylelint **/*.scss --syntax scss --fix ",
     "preinstall": "echo \" Preinstall command not found\"",
@@ -18,7 +18,7 @@
     "postversion": "echo \" Publish command not found\"",
     "prettier": "prettier **/*.js"
   },
-  "pre-commit": [ "pretest" ],
+  "pre-commit": ["lint:sass", "lint:eslint", "test"],
   "author": "Udobnaja",
   "license": "ISC",
   "dependencies": {
