--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npm-run-all --parallel watch:server watch:src",
+    "start": "npm-run-all -p watch:server watch:src",
     "watch:src": "webpack --watch",
     "watch:server": "nodemon -e scss,pug,js --watch app app.js",
     "pretest": "npm run lint:eslint && npm run lint:sass",
@@ -16,7 +16,8 @@
     "build": "echo \" Build/webpack command not found\"",
     "postbuild": "echo \" Prebuild command not found\"",
     "postversion": "echo \" Publish command not found\"",
-    "prettier": "prettier **/*.js"
+    "prettier": "prettier **/*.js",
+    "clean": "rimraf app/public"
   },
   "pre-commit": ["lint:sass", "lint:eslint", "test"],
   "author": "Udobnaja",
