--- a/package.json
+++ b/package.json
@@ -4,18 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npm-run-all -p watch:server watch:src",
-    "watch:src": "webpack --watch",
+    "start": "npm-run-all -p build watch:server",
     "watch:server": "nodemon -e scss,pug,js --watch app app.js",
     "pretest": "npm run lint:eslint && npm run lint:sass",
     "test": "echo \"Error: no test specified\" && exit 0",
     "lint:eslint": "eslint --fix --ignore-path .gitignore .",
     "lint:sass": "stylelint **/*.scss --syntax scss --fix ",
-    "preinstall": "echo \" Preinstall command not found\"",
-    "postintall": "echo \" Postinstall command not found\"",
-    "build": "echo \" Build/webpack command not found\"",
-    "postbuild": "echo \" Prebuild command not found\"",
-    "postversion": "echo \" Publish command not found\"",
+    "build": "webpack",
+    "build:prod": "NODE_ENV=production webpack",
     "prettier": "prettier **/*.js",
     "clean": "rimraf app/public"
   },
