--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "prettier": "prettier **/*.js",
     "clean": "rimraf app/public"
   },
-  "pre-commit": ["lint:sass", "lint:eslint", "test"],
+  "pre-commit": [
+    "lint:sass",
+    "lint:eslint",
+    "test"
+  ],
   "author": "Udobnaja",
   "license": "ISC",
   "dependencies": {
@@ -52,6 +56,7 @@
     "postcss-loader": "^2.1.2",
     "pre-commit": "^1.2.2",
     "prettier": "^1.11.1",
+    "rimraf": "^2.6.2",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
     "stylelint": "^9.1.3",
