Более логичное разбиение команд в package.json

--- a/package.json
+++ b/package.json
@@ -4,17 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npm-run-all -s build:prod server",
-    "start:dev": "npm-run-all -p build watch:server",
+    "start": "npm-run-all -s build server",
+    "start:dev": "npm-run-all -p build:watch server:watch",
     "server": "node index.js",
-    "watch:server": "nodemon -e scss,pug,js --watch index.js",
-    "pretest": "npm run lint:eslint && npm run lint:sass",
+    "server:watch": "nodemon -e scss,pug,js --watch index.js",
+    "pretest": "npm run lint",
     "test": "echo \"Error: no test specified\" && exit 0",
+    "lint": "npm run lint:eslint && npm run lint:sass",
     "lint:eslint": "eslint --ignore-path .gitignore .",
     "lint:sass": "stylelint **/*.scss --syntax scss",
     "lint:fix": "eslint --fix --ignore-path .gitignore . && stylelint **/*.scss --syntax scss --fix",
-    "build": "webpack",
-    "build:prod": "NODE_ENV=production webpack",
+    "build": "NODE_ENV=production webpack",
+    "build:watch": " webpack",
     "clean": "rimraf app/public"
   },
   "pre-commit": [
