--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-sudo: false
+sudo: true
 language: node_js
 node_js:
 - node
@@ -6,8 +6,15 @@ node_js:
 cache:
   directories:
   - node_modules
-services:
-  - docker
-script:
-- npm run test
-- npm run build
+jobs:
+  include:
+    - stage: build docker image
+      script:
+        - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
+        - docker build -t $DOCKER_USERNAME/local-git .
+        - docker images
+        - docker push $DOCKER_USERNAME/local-git
+    - stage: test
+      script: docker run --rm $DOCKER_USERNAME/local-git
+    - script:
+        - docker run --rm $DOCKER_USERNAME/local-git
