--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,11 @@ jobs:
       script: skip
       deploy: &heroku
         provider: heroku
-        app: still-inlet-21388/web
+        app: still-inlet-21388
         api_key:
             secure: $HEROKU_AUTH_TOKEN
+        on:
+            repo: https://github.com/Udobnaja/lesson-4-5
     - stage: deploy to production
       script: skip
       deploy:
