--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ language: node_js
 node_js:
 - node
 - 8.4.0
-env: TRAVIS_SECURE_ENV_VARS=true
+env:
+  -TRAVIS_SECURE_ENV_VARS:true
 cache:
   directories:
   - node_modules
