--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ node_js:
 - 8.4.0
 env:
   -TRAVIS_SECURE_ENV_VARS=true
-  -PATH="./app/git/"
+  -REPO_PATH="./app/git/"
 cache:
   directories:
   - node_modules
