--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ script:
 jobs:
   include:
     - stage: deploy to staging
-      script: skip
+      script: npm install
       deploy: &heroku
         provider: heroku
         app: still-inlet-21388
