clone git without mirror

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lint:fix": "eslint --fix --ignore-path .gitignore . && stylelint **/*.scss --syntax scss --fix",
     "build": "NODE_ENV=production webpack",
     "build:watch": "webpack",
-    "clone": "git clone --mirror https://github.com/Udobnaja/lesson-4-5.git ./app/git/",
+    "clone": "git clone https://github.com/Udobnaja/lesson-4-5.git app/git",
     "clean": "rimraf app/public"
   },
   "pre-commit": [
