--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
     "browser-sync": "^2.23.6",
+    "chai": "^4.1.2",
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.28.11",
@@ -53,6 +54,8 @@
     "eslint-config-yandex": "^1.0.6",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
+    "hermione": "^0.65.2",
+    "mocha": "^5.0.5",
     "node-sass": "^4.7.2",
     "nodemon": "^1.17.2",
     "nodemon-browsersync-webpack-plugin": "^1.0.1",
