--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "server": "node index.js",
     "server:watch": "nodemon -e scss,pug,js --watch index.js",
     "pretest": "npm run lint",
-    "test": "echo \"Error: no test specified\" && exit 0",
+    "test": "mocha test/**/*.js --reporter spec",
     "lint": "npm run lint:eslint && npm run lint:sass",
     "lint:eslint": "eslint --ignore-path .gitignore .",
     "lint:sass": "stylelint **/*.scss --syntax scss",
