--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "lint:fix": "eslint --fix --ignore-path .gitignore . && stylelint **/*.scss --syntax scss --fix",
     "build": "NODE_ENV=production webpack",
     "build:watch": "webpack",
-    "clone": "git clone https://github.com/Udobnaja/lesson-4-5.git ./app/git/",
-    "clean": "rimraf app/public"
+    "clone": "git clone https://github.com/Udobnaja/lesson-4-5.git ./server/git/",
+    "clean": "rimraf server/public"
   },
   "pre-commit": [
     "lint:sass",
