--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "server:watch": "nodemon -e scss,pug,js --watch index.js",
     "pretest": "npm run lint",
     "test": "mocha test/unit/** --reporter spec",
-    "lint": "npm run lint:eslint && npm run lint:sass",
-    "lint:eslint": "eslint --ignore-path .gitignore .",
+    "lint": "npm run lint:js && npm run lint:sass",
+    "lint:js": "eslint --ignore-path .gitignore .",
+    "lint:js:fix": "eslint --fix --ignore-path .gitignore .",
     "lint:sass": "stylelint **/*.scss --syntax scss",
     "lint:fix": "eslint --fix --ignore-path .gitignore . && stylelint **/*.scss --syntax scss --fix",
     "build": "NODE_ENV=production webpack",
@@ -21,7 +22,7 @@
   },
   "pre-commit": [
     "lint:sass",
-    "lint:eslint",
+    "lint:js",
     "test"
   ],
   "author": "Udobnaja",
@@ -37,8 +38,7 @@
     "morgan": "^1.9.0",
     "npm-run-all": "^4.1.2",
     "pug": "^2.0.1",
-    "serve-favicon": "^2.4.5",
-    "stylelint-order": "^0.8.1"
+    "serve-favicon": "^2.4.5"
   },
   "devDependencies": {
     "autoprefixer": "^8.1.0",
