--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "style-loader": "^0.20.3",
     "stylelint": "^9.1.3",
     "stylelint-config-standard": "^18.2.0",
+    "stylelint-order": "^0.8.1",
     "url-loader": "^1.0.1",
     "webpack": "^4.1.1",
     "webpack-cli": "^2.0.12",
