--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ script:
 jobs:
   include:
     - stage: deploy to staging
+      script: skip
       deploy: &heroku
         provider: heroku
         app: still-inlet-21388
