--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,7 @@ node_modules/
 
 # Other files
 /.env
+/test/integration/data.js
+/test/integration/index.html
+/test/integration/report.min.css
+/test/integration/report.min.js
