--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "dotenv": "^5.0.1",
     "errorhandler": "^1.5.0",
     "express": "^4.16.3",
+    "html-reporter": "^2.8.3",
     "lodash": "^4.17.5",
     "morgan": "^1.9.0",
     "npm-run-all": "^4.1.2",
