--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "build": "NODE_ENV=production webpack",
     "build:watch": "webpack",
     "clone": "git clone https://github.com/Udobnaja/lesson-4-5.git ./server/git/",
-    "clean": "rimraf server/public"
+    "clean": "rimraf server/public",
+    "hermione": "./node_modules/.bin/hermione  test/integration/"
   },
   "pre-commit": [
     "lint:sass",
