--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "server": "node index.js",
     "server:watch": "nodemon -e scss,pug,js --watch index.js",
     "pretest": "npm run lint",
-    "test": "mocha test/unit/** --reporter spec",
+    "test": "nyc mocha test/unit/** --reporter spec",
     "lint": "npm run lint:js && npm run lint:sass",
     "lint:js": "eslint --ignore-path .gitignore .",
     "lint:js:fix": "eslint --fix --ignore-path .gitignore .",
@@ -62,6 +62,7 @@
     "nodemon": "^1.17.2",
     "nodemon-browsersync-webpack-plugin": "^1.0.1",
     "npm": "^5.7.1",
+    "nyc": "^11.6.0",
     "postcss-loader": "^2.1.2",
     "pre-commit": "^1.2.2",
     "prettier": "^1.11.1",
